# small-sea-collective

./: .gitignore  AGENTS.md  CONVENTIONS.md  README.md  architecture.md  branch-plan.md  pyproject.toml  spec.md  test_support.py
Archive/: branch-plan-admin-control-clarification.md  branch-plan-better-fetch-merge-separation.md  branch-plan-codex-82-remove-transit-work-tree  branch-plan-codex-issue-69-linked-device-encrypted-team-bootstrap.md  branch-plan-codex-word-of-mouth-readme.md  branch-plan-cuttlefish-refactor.md  branch-plan-device-linking.md  branch-plan-device-oriented-identity-first-steps.md  branch-plan-git-drop-history-first-step.md  branch-plan-hub-bootstrap-transport.md  branch-plan-hub-startup-readiness-probe.md  branch-plan-identity-model-rethink.md  branch-plan-issue-102-member-transport-configuration.md  branch-plan-issue-107-skipped-message-key-bootstrap.md  branch-plan-issue-111-app-bootstrap-sightings.md  branch-plan-issue-118-manager-sightings-ui.md  branch-plan-issue-122-core-participant-registration.md  branch-plan-issue-13-vault-peer-update-ux.md  branch-plan-issue-43-sender-key-rotation.md  branch-plan-issue-44-sender-key-runtime.md  branch-plan-issue-48-note-to-self-sync-discovery.md  (+28 more)
devtools/sandbox/: README.md  pyproject.toml
devtools/sandbox/sandbox/: main.py  workspace.py
devtools/sandbox/sandbox/templates/: base.html  index.html
devtools/sandbox/sandbox/templates/fragments/: minio_card.html  minio_section.html  minio_server.html  participant_row.html  participants_section.html  pending_sessions.html  workspace_picker.html
(+153 files in other folders)
