[project]
name = "small-sea-sandbox"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "fastapi>=0.115",
    "httpx>=0.27",
    "jinja2>=3.1",
    "small-sea-manager",
    "uvicorn>=0.32",
]

[project.scripts]
small-sea-sandbox = "sandbox.main:cli"

[tool.uv.sources]
small-sea-manager = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["sandbox"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
